Fixed search icon alignment

--- a/platforms/common/scss/admin/_layout-manager.scss
+++ b/platforms/common/scss/admin/_layout-manager.scss
@@ -695,7 +695,8 @@ $stripes: linear-gradient(45deg, #ccc 25%, darken(#ccc, 3%) 25%, darken(#ccc, 3%
         i {
             position: absolute;
             right: 10px;
-            top: 10px;
+            top: 50%;
+            margin-top: -12px;
         }
     }
 }
